  construct.
  (Nicolás Ojeda Bär)

### Runtime system:

### Code generation and optimizations:

- #8998, #11321, #11430: change mangling of OCaml long identifiers
  from `camlModule__name_NNN` to `camlModule.name_NNN`.  The previous
  mangling schema, using `__`, was ambiguous.
  (Xavier Leroy, report by sliquister and Michael Bacarella,
   review by Gabriel Scherer)

### Standard library:

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

- #10789: Add `Stack.drop`
  (Léo Andrès, review by Gabriel Scherer)

- #11362: List.map, List.mapi and List.map2 are tail-recursive and faster on
  typical workloads.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #11412: Add Sys.is_regular_file
  (Xavier Leroy, review by Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

- #10818: Preserve integer literal formatting in type hint.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

### Internal/compiler-libs changes:

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

### Build system:

### Bug fixes:

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.
  (Xavier Leroy, report by Thierry Martinez, review by
   Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)
- #10348: Expand GADT equations lazily during unification to avoid ambiguity
  (Jacques Garrigue, review by Leo White)


OCaml 5.0
---------

### Language features:

### Runtime system:

- #11308: Add environment variable to preserve runtime_events after exit
  If the environment variable OCAML_RUNTIME_EVENTS_PRESERVE exists then the